--- a/ZZZ0003.md
+++ b/ZZZ0003.md
@@ -1,4 +1,4 @@
-# ZZZ0001 Linux Installation and Setup 15 marks
+# ZZZ0001 Linux Installation and Setup - 15 marks
 ## Aim
  
 * Understand the concept of an operating system
@@ -26,7 +26,6 @@ smartFarm/
 │   ├── program1.py
 │   └── program2.py
 └── README.MD
-
 ```
 
 ## Submission
