--- a/ZZZ0001.md
+++ b/ZZZ0001.md
@@ -67,4 +67,4 @@ A list of links to documentations will be provided below, it is highly recommend
 * [Python random library official documentation](https://docs.python.org/3/library/random.html)
 
 Examples of previous Thingsboard dashboard:
-* [Example 1](link)
+* [Example Dashboard](https://demo.thingsboard.io/dashboard/ce587cd0-69a5-11ee-9242-93ef3c64501e?publicId=f3ce65c0-69ae-11ee-9242-93ef3c64501e)
