--- a/ZZZ0003.md
+++ b/ZZZ0003.md
@@ -1,4 +1,4 @@
-# ZZZ0001 Linux Installation and Setup - 15 marks
+# ZZZ0001 Linux Installation and Setup - 10 marks
 ## Aim
  
 * Understand the concept of an operating system
@@ -12,11 +12,12 @@
 1. Completion and understanding of ZZZ0001 assignment 
 
 ## Tasks
-1. Setup the virtual machine (VM) using [VMSOFTWARE], use [Ubuntu Server](https://ubuntu.com/download/server) for the operating system (2 marks)
-2. Transfer the python script to the VM using any method of your choice (the python program is the same one as done in ZZZ0001) (2 marks)
-3. Run the python script in the Linux VM
-3. Setup a `cronjob` to let the python script autorun at boot (2 marks)
-4. Create a directory with the following structure using the command line (Hint, use the command `cd` `ls` `touch` `mkdir` ) (2 marks)
+1. Setup the virtual machine (VM) using [VirtualBox](https://www.virtualbox.org/), use [Ubuntu Server](https://ubuntu.com/download/server) for the operating system (2 marks)
+2. ssh into the vm using windows terminal/powershell (2 marks)
+3. Transfer the python script to the VM using any method of your choice (the python program is the same one as done in ZZZ0001) (2 marks)
+4. Run the python script in the Linux VM
+5. Setup a `cronjob` to let the python script autorun at boot (2 marks)
+6. Create a directory with the following structure using the command line (Hint, use the command `cd` `ls` `touch` `mkdir` ) (2 marks)
 ```
 smartFarm/
 ├── arduinoSketches
@@ -34,4 +35,5 @@ There will be a physical/online meeting demo session when the semester starts
 ## Documentations and Guides
 It is highly recommended to lookup guides on Youtube. Use any other resource avaliable. Learing how to search online is the purpose of this assignment too.
 
+* [Install Ubuntu Server 22.04 LTS in Virtual Box; Connect with SSH](https://youtu.be/ElNalqvVaPw)
 * [Beginner's Guide To The Linux Terminal](https://www.youtube.com/watch?v=s3ii48qYBxA)
